# beeper-auotmations

./: -AGENTS.md  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: api_check.rs  app_state.rs  config.rs  lib.rs
src/notifications/: mod.rs  models.rs  service.rs
src/tui/: config_screen.rs  loading_screen.rs  main_screen.rs  mod.rs
src/tui/modules/: mod.rs  notification_screen.rs
