[package]
name = "beeper-auotmations"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auto-beeper-service"
path = "src/bin/service.rs"

[[bin]]
name = "auto-beeper-configurator"
path = "src/bin/configurator.rs"

[dependencies]
beeper-desktop-api = "0.1.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
dirs = "6.0"
anyhow = "1.0"
thiserror = "2.0.17"
uuid = { version = "1.19", features = ["v4"] }
notify = "6.1"